--- a/bookmedikv1/Dockerfile
+++ b/bookmedikv1/Dockerfile
@@ -1,9 +1,8 @@
-FROM debian
+FROM debian:bullseye
 MAINTAINER Arantxa Fernández Morató "ara.fer.mor@gmail.com"
 RUN apt-get update && apt-get upgrade -y && apt-get install apache2 libapache2-mod-php php php-mysql mariadb-client -y && apt-get clean && rm -rf /var/lib/apt/lists/*
 RUN rm /var/www/html/index.html
 ADD bookmedik /var/www/html/
 ADD script.sh /opt/
 RUN chmod +x /opt/script.sh
-EXPOSE 80
 ENTRYPOINT ["/opt/script.sh"]
