--- a/bookmedikv1/docker-compose.yml
+++ b/bookmedikv1/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.3'
 services:
   bookmedik:
     container_name: bookmedik-app
-    image: afermor8/bookmedik:v1
+    image: afermor8/bookmedik:v1_2
     restart: always
     environment:
       USUARIO_BOOKMEDIK: admin
@@ -15,7 +15,7 @@ services:
       - db
   db:
     container_name: bd_mariadb
-    image: mariadb:latest
+    image: mariadb
     restart: always
     environment:
       MARIADB_ROOT_PASSWORD: root
